<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.treinamento.app.ContatoActivity" >

    <EditText
        android:id="@+id/txtNomeContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nome_contato"
        android:inputType="textPersonName" />
     <requestFocus />

    <EditText
        android:id="@+id/txtEnderecoContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_endereco_contato"
        android:inputType="textPostalAddress" >

       
    </EditText>

    <EditText
        android:id="@+id/txtSiteContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_site_contato"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/txtTelefoneContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefone_contato"
        android:inputType="phone" />

    <RatingBar
        android:id="@+id/rateEstrelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="@integer/cinco_estrelas" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar" />

</LinearLayout>